# aleph

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  neovim.json
projects/darkland/src/: launch.cc
src/: main.cc
src/core/: Auto.hpp  EventBus.hpp  EventLoop.hpp  Object.hpp  Singleton.hpp
src/device/: Attribute.hpp  Color.hpp  EventInput.hpp  Symbol.hpp  Terminal.hpp  TerminalKey.hpp
src/framework/: Application.hpp  Director.hpp  EventInitialize.hpp  EventPostInitialize.hpp  EventPreInitialize.hpp  EventTick.hpp  EventUnInitialize.hpp
src/game/prefeb/: Interoperable.hpp  Movable.hpp  Renderable.hpp
src/ui/: Document.hpp  Element.hpp  Event.hpp  EventActive.hpp  EventChange.hpp  EventDective.hpp  EventInput.hpp  EventKey.hpp  EventResize.hpp  Input.hpp  Progress.hpp  Root.hpp  Select.hpp  Text.hpp
src/video/: Point.hpp  Rect.hpp  Renderer.hpp  Size.hpp
