cmake_minimum_required(VERSION 3.12)
project(aleph)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
aux_source_directory(./src SRC)
add_executable(${PROJECT_NAME} ${SRC})

set(CURSES_NEED_NCURSES TRUE)
find_package(Curses REQUIRED)
target_include_directories(${PROJECT_NAME} PRIVATE ${CURSES_INCLUDE_DIRS})
target_compile_options(${PROJECT_NAME} PRIVATE ${CURSES_CFLAGS})
target_link_libraries(${PROJECT_NAME} PRIVATE ncursesw)
find_package(fmt CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt-header-only)